--- a/front__end/package.json
+++ b/front__end/package.json
@@ -15,6 +15,7 @@
     "react-date-picker": "^7.10.0",
     "react-dom": "^16.12.0",
     "react-numeric-input": "^2.2.3",
+    "react-popper-tooltip": "^2.10.1",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1"
