integrated with Auth0, added automated  scheduling and text messageing

--- a/back_end/AMSBackEnd/appsettings.json
+++ b/back_end/AMSBackEnd/appsettings.json
@@ -3,13 +3,23 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Hangfire": "Information"
     }
   },
+
+  "Auth0": {
+    "Domain": "dev-5wttvoce.auth0.com",
+    "ApiIdentifier": "https://ReactAmsApi.com"
+  },
+
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=amssqldb123.database.windows.net;Initial Catalog=amssqldb;User ID=dim505;Password=Ccleaner123!@;Connect Timeout=60;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DefaultConnection": "Data Source=amssqldb123.database.windows.net;Initial Catalog=amssqldb;User ID=dim505;Password=Ccleaner123!@;Connect Timeout=60;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "HangfireConnection": "Data Source=amssqldb123.database.windows.net;Initial Catalog=amssqldb;User ID=dim505;Password=Ccleaner123!@;Connect Timeout=60;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
+
+
 
 }
