moved API keys to backend from frontend, secured api keys, fixed various UI bugs, added emailing to schduled tasks

--- a/back_end/AMSBackEnd/appsettings.json
+++ b/back_end/AMSBackEnd/appsettings.json
@@ -13,12 +13,9 @@
     "ApiIdentifier": "https://ReactAmsApi.com"
   },
 
-  "AllowedHosts": "*",
+  "AllowedHosts": "*"
 
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=amssqldb123.database.windows.net;Initial Catalog=amssqldb;User ID=dim505;Password=Ccleaner123!@;Connect Timeout=60;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
-    "HangfireConnection": "Data Source=amssqldb123.database.windows.net;Initial Catalog=amssqldb;User ID=dim505;Password=Ccleaner123!@;Connect Timeout=60;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
-  }
+
 
 
 
