--- a/front__end/package.json
+++ b/front__end/package.json
@@ -11,11 +11,15 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "google-maps-react": "^2.0.2",
+    "konva": "^4.2.2",
     "react": "^16.12.0",
     "react-app-polyfill": "^1.0.6",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-date-picker": "^7.10.0",
     "react-dom": "^16.12.0",
+    "react-dots-loader": "^1.1.4",
+    "react-konva": "^16.13.0-0",
     "react-numeric-input": "^2.2.3",
     "react-popper-tooltip": "^2.10.1",
     "react-reveal": "^1.2.2",
