--- a/Tenant_Front_end/package.json
+++ b/Tenant_Front_end/package.json
@@ -5,14 +5,17 @@
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.7.0",
     "@brainhubeu/react-carousel": "^1.13.40",
-    "@material-ui/core": "^4.9.11",
+    "@material-ui/core": "^4.9.12",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.51",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "google-maps-react": "^2.0.6",
     "konva": "^5.0.2",
+    "material-ui": "^0.20.2",
+    "material-ui-colors": "^1.0.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
