--- a/back_end/AMSBackEnd/AMSBackEnd.csproj
+++ b/back_end/AMSBackEnd/AMSBackEnd.csproj
@@ -15,10 +15,18 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.2" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
+    <PackageReference Include="RestSharp" Version="106.10.1" />
+    <PackageReference Include="SendGrid" Version="9.14.1" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.5.0" />
     <PackageReference Include="Twilio" Version="5.39.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\TenantFrontEnd\" />
+    <Folder Include="Jobs\TenantFrontEnd\" />
+    <Folder Include="Model\TenantFrontEnd\" />
   </ItemGroup>
 
 
