--- a/LandLord_front_end/package.json
+++ b/LandLord_front_end/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "formik": "^2.1.4",
     "google-maps-react": "^2.0.6",
     "konva": "^5.0.2",
     "react": "^16.13.1",
@@ -22,7 +23,8 @@
     "react-popper-tooltip": "^2.11.1",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "yup": "^0.29.0"
   },
   "scripts": {
     "start": "react-scripts start",
