--- a/Tenant_Front_end/package.json
+++ b/Tenant_Front_end/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "bootstrap": "^4.5.0",
     "formik": "^2.1.4",
     "google-maps-react": "^2.0.6",
     "konva": "^5.0.2",
