--- a/Tenant_Front_end/package.json
+++ b/Tenant_Front_end/package.json
@@ -28,6 +28,7 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-stripe-elements": "^6.1.2",
     "yup": "^0.28.5"
   },
   "scripts": {
