--- a/back_end/AMSBackEnd/AMSBackEnd.csproj
+++ b/back_end/AMSBackEnd/AMSBackEnd.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
     <PackageReference Include="RestSharp" Version="106.10.1" />
     <PackageReference Include="SendGrid" Version="9.14.1" />
+    <PackageReference Include="Stripe.net" Version="37.8.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.5.0" />
