--- a/LandLord_front_end/package.json
+++ b/LandLord_front_end/package.json
@@ -7,6 +7,7 @@
     "@brainhubeu/react-carousel": "^1.13.40",
     "@material-ui/core": "^4.9.11",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -14,6 +15,7 @@
     "formik": "^2.1.4",
     "google-maps-react": "^2.0.6",
     "konva": "^5.0.2",
+    "material-ui-phone-number": "^2.2.6",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
