--- a/LandLord_front_end/package.json
+++ b/LandLord_front_end/package.json
@@ -15,7 +15,9 @@
     "formik": "^2.1.4",
     "google-maps-react": "^2.0.6",
     "konva": "^5.0.2",
+    "libphonenumber-js": "^1.7.53",
     "material-ui-phone-number": "^2.2.6",
+    "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
@@ -26,6 +28,7 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "twilio-chat": "^3.4.0",
     "yup": "^0.29.0"
   },
   "scripts": {
