--- a/Tenant_Front_end/package.json
+++ b/Tenant_Front_end/package.json
@@ -18,6 +18,7 @@
     "konva": "^5.0.2",
     "material-ui": "^0.20.2",
     "material-ui-colors": "^1.0.0",
+    "material-ui-phone-number": "^2.2.6",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
