now able to send and receive chats on the tenant side and landlord side

--- a/Tenant_Front_end/.env
+++ b/Tenant_Front_end/.env
@@ -1,10 +1,10 @@
 REACT_APP_test=""
-REACT_APP_FrontEndSiteURL="http://localhost:3000"
-REACT_APP_BackEndUrl="https://localhost:5001"
-#
+REACT_APP_FrontEndSiteURL="https://amstenantfrontend.azurewebsites.net"
+REACT_APP_BackEndUrl="https://amsbackend.azurewebsites.net"
+#http://localhost:3000
 #https://amsfrontend.azurewebsites.net
-#https://amstenantfrontend.azurewebsites.net"
-#https://amsbackend.azurewebsites.net
+#https://localhost:5001
+#
 #
 #
 #
