--- a/LandLord_front_end/.env
+++ b/LandLord_front_end/.env
@@ -1,10 +1,10 @@
 REACT_APP_test=""
-REACT_APP_FrontEndSiteURL="http://localhost:3000"
-REACT_APP_BackEndUrl="https://localhost:5001"
-#
-#https://amsfrontend.azurewebsites.net
+REACT_APP_FrontEndSiteURL="https://amsfrontend.azurewebsites.net"
+REACT_APP_BackEndUrl="https://amsbackend.azurewebsites.net"
+#http://localhost:3000
+#https://localhost:5001
 #https://amstenantfrontend.azurewebsites.net"
-#https://amsbackend.azurewebsites.net
+#
 #
 #
 #
