--- a/Tenant_Front_end/.env
+++ b/Tenant_Front_end/.env
@@ -1,11 +1,10 @@
 REACT_APP_test=""
-REACT_APP_FrontEndSiteURL="http://localhost:3000"
-REACT_APP_BackEndUrl="https://localhost:5001"
-#https://amstenantfrontend.azurewebsites.net
+REACT_APP_FrontEndSiteURL="https://amstenantfrontend.azurewebsites.net"
+REACT_APP_BackEndUrl="https://amsbackend.azurewebsites.net"
 #https://amsfrontend.azurewebsites.net
-#https://amsbackend.azurewebsites.net
-#
-#
+#http://localhost:3000
+#https://amstenantfrontend.azurewebsites.net
+#https://localhost:5001
 #
 #
 #
